[package]
name = "parse_x86"
version = "0.1.0"
edition = "2021"
authors = ["Russ Goetz <russgoetz@gmail.com>"]
description = "Parses x86 code."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
goblin = "0.6.0"
